; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/extr_nxp-ptn3460.c_ptn3460_post_disable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/bridge/extr_nxp-ptn3460.c_ptn3460_post_disable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.drm_bridge = type { i32 }
%struct.ptn3460_bridge = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"failed to unprepare panel\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.drm_bridge*)* @ptn3460_post_disable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ptn3460_post_disable(%struct.drm_bridge* %0) #0 {
  %2 = alloca %struct.drm_bridge*, align 8
  %3 = alloca %struct.ptn3460_bridge*, align 8
  store %struct.drm_bridge* %0, %struct.drm_bridge** %2, align 8
  %4 = load %struct.drm_bridge*, %struct.drm_bridge** %2, align 8
  %5 = call %struct.ptn3460_bridge* @bridge_to_ptn3460(%struct.drm_bridge* %4)
  store %struct.ptn3460_bridge* %5, %struct.ptn3460_bridge** %3, align 8
  %6 = load %struct.ptn3460_bridge*, %struct.ptn3460_bridge** %3, align 8
  %7 = getelementptr inbounds %struct.ptn3460_bridge, %struct.ptn3460_bridge* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i64 @drm_panel_unprepare(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %1
  %12 = call i32 @DRM_ERROR(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %11, %1
  ret void
}

declare dso_local %struct.ptn3460_bridge* @bridge_to_ptn3460(%struct.drm_bridge*) #1

declare dso_local i64 @drm_panel_unprepare(i32) #1

declare dso_local i32 @DRM_ERROR(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
